# face-detector-viola-algorithm

./: CMakeLists.txt  README.md  main.cpp
